--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Project-specific
+*/.vscode
+*/.vscode/*
+*/.pio
+*/pid_temp.txt
+*/gps_data_live.txt
+*/config.ini
